syntax = "proto3";

package app.v1;

option php_namespace = "App\\Api\\V1";
option php_metadata_namespace = "App\\Api\\V1\\Metadata";
option go_package = "app/v1";

// Session represents user session data
message Session {
  string id = 1;
  int64 user_id = 2;
  string payload = 3;
  int64 expires_at = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

// SessionPayload represents client information stored in the session
message SessionPayload {
  string ip = 1;
  string user_agent = 2;
  string accept_language = 3;
  string accept_encoding = 4;
  string x_forwarded_for = 5;
  string referer = 6;
  string origin = 7;
  string sec_ch_ua = 8;
  string sec_ch_ua_platform = 9;
  string sec_ch_ua_mobile = 10;
  string dnt = 11;
  string sec_fetch_dest = 12;
  string sec_fetch_mode = 13;
  string sec_fetch_site = 14;
  string geo_location = 15;
}

// GeoLocationData represents geolocation information
message GeoLocationData {
  string country = 1;
  string country_code = 2;
  string region = 3;
  string city = 4;
  string zip = 5;
  double lat = 6;
  double lon = 7;
  string timezone = 8;
}